--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html class="h-full bg-gray-100" lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Portal</title>
-</head>
-<body class="h-full bg-[#f5f5f6]">
-<div id="root" class="h-full"></div>
-<script type="module" src="/src/main.tsx"></script>
-</body>
+<html class="h-full bg-gray-100" lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Portal</title>
+  </head>
+  <body class="h-full bg-[#f5f5f6]">
+    <div id="root" class="h-full"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
